# Grobidmonkey

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Test.yml  python-package.yml  python-publish-test  python-publish-test.yml  python-publish.yml
Document/: README.md  tutorial.ipynb
Document/resources/: 2308.13067.pdf.tei.xml  example.pdf.tei.xml
src/grobidmonkey/: reader.py  utils.py
src/grobidmonkey.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/grobidmonkey/methods/: x2dmethod.py
tests/: test.ipynb  testMethods.py  testUtils.py
tests/test_resources/: paper_process-3.pdf.tei.xml
